open additional modules when invoking java
In particular,
  --add-opens java.desktop/javax.swing.text.html=ALL-UNNAMED
is necessary to launch JOSM's internal help browser